# hiv-latency-benchmark

./: .gitignore  LICENSE  README.md  external_run.sh  pyproject.toml  redraw_log.txt
configs/: default.yaml
data/: README.md  manifest.json
docs/paper/figures/: reliability_ece.json
docs/paper/tables/: appendix_prediction_counts.csv  bootstrap_donor_binary.json  table1_dataset_summary.csv  table2_validation_metrics.csv  table3_donor_bootstrap.csv  table3_donor_metrics.csv
notebooks/: 01_explore_gse111727.ipynb  02_train_baseline.ipynb
scripts/: auto_label_gse111727.py  bootstrap_ci.py  build_paper_artifacts.py  download_geo.py  evaluate.py  evaluate_external.py  label_gse180133.py  make_tables.py  make_tables_external.py  normalize_eval_csvs.py  plot_reliability.py  plot_reliability_external.py  predict_uncal.py  prepare_data.py  prepare_external.py  split_dataset.py  train.py
src/hivlat/: __init__.py  config.py  logging.py
src/hivlat/data/: labeling.py  loaders.py  preprocess.py
src/hivlat/models/: baseline.py  calibrate.py  metrics.py
src/hivlat/utils/: io.py
tests/: test_labeling.py  test_loaders.py
